support LCC with libraries